<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81F1E6"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gmp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="#2D2E2E"
                android:text="@string/registration" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bgl"
                android:layout_margin="10dp"
                android:layout_marginTop="50dp"
                android:padding="30dp"
                android:layout_gravity="center"
                android:gravity="center">


                <EditText
                    android:id="@+id/name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:text="" />

                <EditText
                    android:id="@+id/emailR"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_below="@id/name"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:paddingLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"/>
                <EditText
                    android:id="@+id/addressR"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/emailR"
                    android:inputType="textPersonName"
                    android:text=""
                    android:paddingLeft="20dp"
                    android:hint="@string/address"/>
                <EditText
                    android:id="@+id/phoneR"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_below="@id/addressR"
                    android:inputType="number"
                    android:text=""
                    android:paddingLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/phone"/>
                <EditText
                    android:id="@+id/passwordR"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phoneR"
                    android:inputType="numberPassword"
                    android:text=""
                    android:paddingLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"/>
                <FrameLayout
                    android:id="@+id/framelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/passwordR">

                <ProgressBar
                    android:id="@+id/registeProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="100dp"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/register"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordR"
                    android:layout_marginTop="40dp"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    android:background="@drawable/bg_btn"
                    android:layout_marginLeft="50dp"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/teal_200"
                    android:onClick="login"
                    android:layout_below="@id/framelayout"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>