<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/rlbg"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/pune_vibhag"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


<RadioGroup
    android:layout_below="@+id/textView3"
    android:id="@+id/radiogp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="100dp"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_marginTop="40dp">


    <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"

                android:textStyle="bold"
                android:text="@string/_7_12" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/_8a" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malmatta_patark"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

</RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radiogp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jilha"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/taluka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taluka"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/village"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/village"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/linear1"
                android:layout_marginTop="10dp"

                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#F4F4F4"
                    android:layout_marginTop="10dp">
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:layout_marginTop="10dp">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        />
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>